Getters and Modifiers for java ADTs